--- a/package.json
+++ b/package.json
@@ -4,26 +4,19 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "webpack-dev-server  --config webpack.dev.js --open",
-		"build": "webpack --config webpack.prod.js"
+		"build": "webpack --config webpack.config.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"css-loader": "^2.1.0",
-		"file-loader": "^3.0.1",
-		"html-loader": "^0.5.5",
-		"html-webpack-plugin": "^3.2.0",
-		"mini-css-extract-plugin": "^0.5.0",
-		"optimize-css-assets-webpack-plugin": "^5.0.1",
-		"style-loader": "^0.23.1",
-		"webpack": "^4.29.6",
-		"webpack-cli": "^3.2.3",
-		"webpack-dev-server": "^3.2.1",
-		"webpack-merge": "^4.2.1"
+		"css-loader": "^6.7.3",
+		"webpack": "^5.83.1",
+		"webpack-cli": "^5.1.1"
 	},
 	"dependencies": {
-		"clean-webpack-plugin": "^2.0.0"
+		"css-minimizer-webpack-plugin": "^5.0.0",
+		"html-webpack-plugin": "^5.5.1",
+		"mini-css-extract-plugin": "^2.7.5"
 	}
 }
