--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"webpack-cli": "^5.1.1"
 	},
 	"dependencies": {
+		"copy-webpack-plugin": "^11.0.0",
 		"css-minimizer-webpack-plugin": "^5.0.0",
 		"html-webpack-plugin": "^5.5.1",
 		"mini-css-extract-plugin": "^2.7.5"
