--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "webpack --config webpack.config.js"
+		"build": "webpack --config webpack.config.js",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
+	},
+	"repository": {
+		"url": "git+https://github.com/konyan/iron-html"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
 		"css-loader": "^6.7.3",
+		"gh-pages": "^5.0.0",
 		"webpack": "^5.83.1",
 		"webpack-cli": "^5.1.1"
 	},
