--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 	"devDependencies": {
 		"css-loader": "^6.7.3",
 		"gh-pages": "^5.0.0",
+		"image-minimizer-webpack-plugin": "^3.8.2",
+		"sharp": "^0.32.1",
 		"webpack": "^5.83.1",
 		"webpack-cli": "^5.1.1"
 	},
